[gd_scene load_steps=3 format=3 uid="uid://cxvp48ihr6wkw"]

[ext_resource type="Script" path="res://window_bar.gd" id="1_0ipso"]
[ext_resource type="Texture2D" uid="uid://dvbfdyrl8lg37" path="res://ui/inventory/inventory9patch.png" id="1_t8omc"]

[node name="WindowBar" type="Panel"]
anchors_preset = 10
anchor_right = 1.0
offset_right = -848.0
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0ipso")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_t8omc")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 22
patch_margin_bottom = 22
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="BoxContainer" type="BoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="NinePatchRect/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/BoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0

[node name="InventoryButton" type="Button" parent="NinePatchRect/MarginContainer/BoxContainer/Panel/MarginContainer"]
layout_mode = 2
text = "Inventory
(I)"
text_overrun_behavior = 1

[node name="Panel2" type="Panel" parent="NinePatchRect/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/MarginContainer/BoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CraftButton" type="Button" parent="NinePatchRect/MarginContainer/BoxContainer/Panel2/MarginContainer2"]
layout_mode = 2
text = "Craft
(Tab)"

[node name="Panel3" type="Panel" parent="NinePatchRect/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/MarginContainer/BoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WarpButton" type="Button" parent="NinePatchRect/MarginContainer/BoxContainer/Panel3/MarginContainer2"]
layout_mode = 2
text = "Warp
(Y)"

[connection signal="pressed" from="NinePatchRect/MarginContainer/BoxContainer/Panel/MarginContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/BoxContainer/Panel2/MarginContainer2/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/BoxContainer/Panel3/MarginContainer2/WarpButton" to="." method="_on_warp_button_pressed"]
